--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^5.2.0",
+    "mysql2": "^2.0.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
